Opened 13 years ago
Closed 13 years ago
#2577 closed defect (fixed)
crash in lavfi mp wrapper with yuvj pixel formats
| Reported by: | Clément Bœsch | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avfilter |
| Version: | git-master | Keywords: | mp |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
With assert level >= 1 (--assert-level=...), a assert is triggered if a yuvj* pixel format is send to a wrapped mp filter:
% ./ffmpeg -f lavfi -i testsrc -vf format=yuvj420p,mp=eq -f null -
ffmpeg version N-53112-gd686517 Copyright (c) 2000-2013 the FFmpeg developers
built on May 16 2013 00:59:29 with gcc 4.8.0 (GCC) 20130502 (prerelease)
configuration: --enable-gpl --enable-version3 --enable-fontconfig --enable-libfreetype --enable-libmp3lame --enable-libvorbis --enable-libxvid --enable-libx264 --enable-libvpx --enable-libtheora --enable-x11grab --enable-libopenjpeg --enable-libass --enable-libmodplug --enable-libv4l2 --cc=colorgcc --samples=/home/ubitux/fate-samples --prefix=/tmp/ffinstall --disable-runtime-cpudetect --enable-libcelt --enable-libopencv --enable-frei0r --enable-libcaca --enable-libiec61883 --enable-libopencore-amrwb --enable-libopencore-amrnb --enable-libopus --enable-libpulse --enable-libspeex --enable-libquvi --assert-level=2
libavutil 52. 32.100 / 52. 32.100
libavcodec 55. 9.100 / 55. 9.100
libavformat 55. 7.100 / 55. 7.100
libavdevice 55. 0.100 / 55. 0.100
libavfilter 3. 68.101 / 3. 68.101
libswscale 2. 3.100 / 2. 3.100
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 3.100 / 52. 3.100
Input #0, lavfi, from 'testsrc':
Duration: N/A, start: 0.000000, bitrate: N/A
Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
[Parsed_mp_1 @ 0x1a9f000] 'eq' is a wrapped MPlayer filter (libmpcodecs). This filter may be removed
once it has been ported to a native libavfilter.
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf55.7.100
Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuvj420p, 320x240 [SAR 1:1 DAR 4:3], q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
Stream #0:0 -> #0:0 (rawvideo -> rawvideo)
Press [q] to stop, [?] for help
Assertion frame->format == link->format failed at libavfilter/avfilter.c:1060
zsh: abort (core dumped) ./ffmpeg -f lavfi -i testsrc -vf format=yuvj420p,mp=eq -f null -
Reproducible with other mp filter, and not reproducible with a !yuvj pixel format.
Change History (1)
comment:1 by , 13 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in ef906390043010cde8844ec30da79926f2f8b846