avfilter/vf_mp:  preserve pixel format when possible

Fixes Ticket2577

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>